      o Improved command line, supports N3 etc, OntDocumentManager
      
   File Utilities
      o ModelLoader retired by deprecation.
        Use FileManager instead, specifically, FileManager.get() for the
        global FileManager (or create your own).
        Create new model with FileManager.get().loadModel
        Read into an existing model with FileManager.get().readModel

   Creating sets/maps
      o util.CollectionFactory has static methods for creating hashed Maps
        and hashed Sets. These are used in the internals to allow the
        implementing classes to be changed (eg to use the trove library).
        Non-hashed-collection create methods may follow.
      o This was initially called HashUtils; that class remains, with the
        initial method names, but it is deprecated and will disappear post
        J2.2.
        
   ARP
      o New support for non-Xerces SAX sources.
      o Support for DOM sources (Java 1.4.2 and later).
      o ARP setup rationalized, a few methods deprecated as a result.
      o Improved documentation, covering new features, (see doc/ARP)
      o *Removed* StanfordImpl, assuming noone uses it. Please
        complain (jena-dev@yahoogroups.com) if assumption was false.
         
  Utilities
      o new class IteratorCollection with methods iteratorToSet and
        iteratorToList (heavility used in tests and useful in general)

  N3
      o Resolve relative URIs if there is a base.
      	



Jena 2.1 - Main changes from Jena 2.0
  Installation
      The names of some jars have changed be sure to update your classpath.
	  The name of the xerces jars are now: xercesImpl.jar and xml-apis.jar
	  We also require Jakarta commons logging: commons-logging.jar
	  See readme.html for the full list of jars.

  OWL Syntax Checker
      Major update from alpha version (Jena 2.0), to production
      version (Jena 2.1).
      API created.
      Many fold performance improvement (orders of
      magnitude)